--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-numpy           2.1.3
-pandas          2.2.3
-pip             24.2
-python-dateutil 2.9.0.post0
-pytz            2024.2
-six             1.16.0
-tzdata          2024.2
+fastapi==0.115.5
+pandas==2.2.3
+Requests==2.32.3
