--- a/iei-bot/Dockerfile
+++ b/iei-bot/Dockerfile
@@ -1,22 +1,9 @@
 FROM python:3.13-slim
 
-# Install Chrome and required dependencies
-RUN apt-get update && apt-get install -y \
-    wget \
-    gnupg \
-    curl \
-    unzip \
-    && mkdir -p /etc/apt/keyrings \
-    && wget -q -O- https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor > /etc/apt/keyrings/google.gpg \
-    && echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/google.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
-    && apt-get update \
-    && apt-get install -y google-chrome-stable \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y chromium && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy Chrome Driver
-COPY chromedriver-linux64 /chromedriver-linux64
-
+# COPY chromedriver-linux64 /chromedriver-linux64
 # Set working directory
 WORKDIR /iei-bot
 
