--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,19 +4,8 @@ ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable
 COPY . /app
 WORKDIR /app
-
-FROM base AS prod-deps
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
-
-FROM base AS build
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
-RUN pnpm run build
-
-FROM base
-COPY --from=prod-deps /app/node_modules /app/node_modules
-COPY --from=build /app/dist /app/dist
-
+RUN pnpm install
 ENV HOST=0.0.0.0
 ENV PORT=4321
 EXPOSE 4321 
-CMD [ "pnpm", "dev", "--host"]
+CMD ["pnpm", "dev", "--host"]
