--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -32,4 +32,4 @@ ENV DB_PORT=5432
 EXPOSE 8080
 
 # # Run the application
-CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"]
