--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: ./core
     ports:
       - "8080:8080"
+    volumes:
+      - ./core:/app
     environment:
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
