feat: add volume for frontend (hot reload)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
       context: ./frontend
     ports: 
       - "4321:4321"
+    volumes:
+      - ./frontend:/app
 
   wrapper-cle:
     build:
